[gd_scene load_steps=8 format=3 uid="uid://ddgvw7imb6yqu"]

[ext_resource type="Script" path="res://weapons/Weapon.gd" id="1_su8yy"]
[ext_resource type="PackedScene" uid="uid://4oqoav3s7krh" path="res://weapons/bullet.tscn" id="2_fuv1q"]
[ext_resource type="AudioStream" uid="uid://dmlsxpbenpi65" path="res://addons/sounds/vlc-record-2024-03-08-11h30m28s-Shooting sound.mp3-.mp3" id="3_135a3"]
[ext_resource type="Texture2D" uid="uid://d3kffokcrgmfp" path="res://addons/sprites/Muzzle Flash.png" id="4_rxrmh"]
[ext_resource type="Texture2D" uid="uid://bxtgl26j5caed" path="res://addons/sprites/M4A1.png" id="5_xaxna"]

[sub_resource type="Animation" id="Animation_l70ni"]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 0.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0hh2h"]
_data = {
"muzzle_flash": SubResource("Animation_l70ni")
}

[node name="Weapon" type="Node2D"]
script = ExtResource("1_su8yy")
Bullet = ExtResource("2_fuv1q")

[node name="EndOfGun" type="Marker2D" parent="."]
position = Vector2(144, 0)

[node name="GunDirection" type="Marker2D" parent="."]
position = Vector2(150, 0)

[node name="ShootingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_135a3")
volume_db = -10.0

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(202, -3)
scale = Vector2(1.2, 0.2)
texture = ExtResource("4_rxrmh")
region_enabled = true
region_rect = Rect2(-1.50119, 203.65, 185.453, 176.893)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MuzzleFlash")
libraries = {
"": SubResource("AnimationLibrary_0hh2h")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.52588e-05, 3.8147e-06)
rotation = 1.57079
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_xaxna")
